--- a/ecomm-v2/styles/globals.css
+++ b/ecomm-v2/styles/globals.css
@@ -82,6 +82,13 @@ body,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   box-sizing: border-box;
 }
+body {
+  background: linear-gradient(
+    90deg,
+    rgba(115, 17, 17, 1) 0%,
+    rgba(39, 45, 135, 1) 100%
+  );
+}
 ::-webkit-scrollbar {
   width: 0px;
 }
@@ -203,19 +210,20 @@ span.text-red {
   color: black;
 }
 
-.hero-banner-container {
+.slider-container {
   padding: 100px 40px;
-  background-color: #dcdcdc;
+  background-color: #a39f9f;
+  opacity: 70%;
   border-radius: 15px;
   position: relative;
   height: 500px;
   line-height: 0.9;
   width: 100%;
 }
-.hero-banner-container .beats-solo {
+.slider-container .slider-text {
   font-size: 20px;
 }
-.hero-banner-container button {
+.slider-container button {
   border-radius: 15px;
   padding: 10px 16px;
   background-color: #f02d34;
@@ -228,16 +236,78 @@ span.text-red {
   z-index: 10000 !important;
 }
 
-.hero-banner-container h3 {
+.slider-container h3 {
   font-size: 4rem;
   margin-top: 4px;
 }
-.hero-banner-container h1 {
+.slider-container h1 {
   color: white;
   font-size: 10em;
   margin-left: -20px;
   text-transform: uppercase;
 }
+
+.crossfade > figure {
+  margin: 10px;
+  display: flex;
+  /* justify-content: center;
+  align-items: center; */
+  animation: imageAnimation 30s linear infinite 0s;
+  backface-visibility: hidden;
+  background-size: cover;
+  background-position: center center;
+  color: transparent;
+  height: 50vh;
+  left: 25%;
+  opacity: 0;
+  position: absolute;
+  top: 0px;
+  width: 50vw;
+  z-index: 0;
+}
+/* Add background images to the slideshow. */
+
+.crossfade > figure:nth-child(1) {
+  background-image: url("assets/BOTW2.avif");
+}
+.crossfade > figure:nth-child(2) {
+  animation-delay: 6s;
+  background-image: url("assets/CP2.jpeg");
+}
+.crossfade > figure:nth-child(3) {
+  animation-delay: 12s;
+  background-image: url("assets/Fallout.jpeg");
+}
+.crossfade > figure:nth-child(4) {
+  animation-delay: 18s;
+  background-image: url("assets/GOW2.webp");
+}
+.crossfade > figure:nth-child(5) {
+  animation-delay: 24s;
+  background-image: url("assets/MC2.jpeg");
+}
+/* Create the crossfade effect using CSS3 animations. */
+
+@keyframes imageAnimation {
+  0% {
+    animation-timing-function: ease-in;
+    opacity: 0;
+  }
+  8% {
+    animation-timing-function: ease-out;
+    opacity: 1;
+  }
+  17% {
+    opacity: 1;
+  }
+  25% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
 .hero-banner-image {
   position: absolute;
   top: 0%;
@@ -684,7 +754,7 @@ span.text-red {
 }
 
 @media screen and (max-width: 800px) {
-  .hero-banner-container {
+  .slider-container {
     height: 560px;
   }
   .hero-banner-image {
@@ -724,16 +794,16 @@ span.text-red {
     flex-wrap: wrap;
     gap: 20px;
   }
-  .hero-banner-container {
+  .slider-container {
     line-height: 1.3;
   }
-  .hero-banner-container h1 {
+  .slider-container h1 {
     font-size: 50px;
   }
-  .hero-banner-container h3 {
+  .slider-container h3 {
     font-size: 40px;
   }
-  .hero-banner-container button {
+  .slider-container button {
     margin-top: 90px;
     z-index: 10000;
   }
