--- a/ecomm-v2/styles/globals.css
+++ b/ecomm-v2/styles/globals.css
@@ -194,6 +194,21 @@ span.text-red {
 .product-card:hover {
   transform: scale(1.1, 1.1);
 }
+
+.product-card-gear {
+  margin: 10px 10px;
+  display: flex;
+  flex-direction: row;
+  cursor: pointer;
+  transform: scale(1, 1);
+  transition: transform 0.5s ease;
+  color: #324d67;
+}
+
+.product-card-gear:hover {
+  transform: scale(1.1, 1.1);
+}
+
 .product-image {
   border-radius: 15px;
   background-color: #ebebeb;
@@ -248,7 +263,7 @@ span.text-red {
 }
 
 .crossfade > figure {
-  margin: 10px;
+  margin: 0px;
   display: flex;
   /* justify-content: center;
   align-items: center; */
@@ -263,7 +278,7 @@ span.text-red {
   position: absolute;
   top: 0px;
   width: 50vw;
-  z-index: 0;
+  z-index: -1;
 }
 /* Add background images to the slideshow. */
 
@@ -341,7 +356,7 @@ span.text-red {
 .products-heading {
   text-align: center;
   margin: 40px 0px;
-  color: #324d67;
+  color: #929aa1;
 }
 .products-heading h2 {
   font-size: 40px;
@@ -349,7 +364,7 @@ span.text-red {
 }
 .products-heading p {
   font-size: 16px;
-  font-weight: 200;
+  font-weight: 300;
 }
 .footer-banner-container {
   padding: 100px 40px;
@@ -753,7 +768,11 @@ span.text-red {
   margin-top: 10px;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1150px) {
+  .crossfade > figure {
+    max-width: 50vw;
+    max-height: 50vh;
+  }
   .slider-container {
     height: 560px;
   }
