--- a/ecomm-v2/styles/globals.css
+++ b/ecomm-v2/styles/globals.css
@@ -196,7 +196,6 @@ span.text-red {
 }
 
 .product-card-gear {
-  margin: 10px 10px;
   display: flex;
   flex-direction: row;
   cursor: pointer;
@@ -204,8 +203,15 @@ span.text-red {
   transition: transform 0.5s ease;
   color: #324d67;
 }
+.gear {
+  margin: 7.5px;
+  cursor: pointer;
+  transform: scale(1, 1);
+  transition: transform 0.5s ease;
+  color: #324d67;
+}
 
-.product-card-gear:hover {
+.gear:hover {
   transform: scale(1.1, 1.1);
 }
 
