--- a/ecomm-v2/styles/globals.css
+++ b/ecomm-v2/styles/globals.css
@@ -222,6 +222,17 @@ span.text-red {
   transition: transform 0.5s ease;
 }
 
+.product-image-gear {
+  border-radius: 15px;
+  background-color: #8e8d8d;
+  transform: scale(1, 1);
+  transition: transform 0.5s ease;
+}
+
+.product-image-gear:nth-child(1) {
+  background-image: url("./assets/headphones.jpg");
+}
+
 .product-name {
   font-weight: 500;
 }
@@ -329,14 +340,45 @@ span.text-red {
   }
 }
 
-.hero-banner-image {
-  position: absolute;
-  top: 0%;
-  right: 20%;
-  width: 450px;
-  height: 450px;
+form {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 90%;
+  max-width: 800px;
 }
-
+.contact {
+  margin: 10px;
+  margin-bottom: 15px;
+}
+input,
+textarea {
+  width: 100%;
+  margin: 1rem auto;
+  padding: 10px;
+  outline: 0;
+  border: 1px solid black;
+  color: #d9f0f7;
+  background: transparent;
+  font-size: 20px;
+}
+label {
+  color: #d9f0f7;
+}
+button {
+  background-color: #0e0d0f;
+  border: 1px;
+  padding: 15px 30px;
+  color: #d9f0f7;
+  cursor: pointer;
+  max-width: 150px;
+  max-height: 50px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  border-radius: 10px;
+}
 .desc {
   position: absolute;
   right: 10%;
@@ -377,7 +419,7 @@ span.text-red {
   background-color: #f02d34;
   border-radius: 15px;
   position: relative;
-  height: 400px;
+  height: 700px;
   line-height: 1;
   color: white;
   width: 100%;
@@ -782,14 +824,12 @@ span.text-red {
   .slider-container {
     height: 560px;
   }
-  .hero-banner-image {
-    width: 77%;
-    height: 62%;
-    top: -2%;
-    right: -6%;
+  .contact {
+    max-width: 400px;
+    max-height: 200px;
   }
   .footer-banner-container {
-    height: 560px;
+    height: 600px;
     margin-top: 80px;
   }
   .footer-banner-image {
@@ -917,5 +957,12 @@ span.text-red {
   .btn-container {
     width: 300px;
     margin: auto;
+  }
+}
+@media screen and (max-width: 550px) {
+  .contact {
+    margin: 1px;
+    max-width: 400px;
+    max-height: 200px;
   }
 }
