--- a/ecomm-v2/styles/globals.css
+++ b/ecomm-v2/styles/globals.css
@@ -166,8 +166,9 @@ span.text-red {
   transform: scale(1.1, 1.1);
 }
 .cart-item-qty {
+  opacity: 80%;
   position: absolute;
-  right: -8px;
+  right: 25px;
   font-size: 12px;
   color: #eee;
   background-color: #f02d34;
@@ -280,7 +281,7 @@ span.text-red {
 }
 
 .crossfade > figure {
-  margin: 0px;
+  margin-top: 30px;
   display: flex;
   /* justify-content: center;
   align-items: center; */
@@ -289,7 +290,7 @@ span.text-red {
   background-size: cover;
   background-position: center center;
   color: transparent;
-  height: 50vh;
+  height: 75%;
   left: 25%;
   opacity: 0;
   position: absolute;
